--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>{{page.title}} - Kris makes stuff</title>
+    <title>Kris makes stuff</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/assets/css/portfolio-rethink.css?v=7">
+    <link rel="icon" type="image/x-icon" href="/assets/icons/favicon.ico">
     <script type="text/javascript" src="/assets/scripts/portfolio/main.js" defer></script>
 
     <style>
@@ -62,13 +63,13 @@
           <div style="width: 100%;">
             <div class="top_page_wrapper">
               <button class="top_page_btn page_btn active" id="display_written_content">
-                <img src="/assets/icons/sticky_note_2.svg">
+                <label class=>About</label>
               </button>
               <button class="top_page_btn page_btn" id="display_post_list">
-                <img src="/assets/icons/list.svg">
+                <label>Posts</label>
               </button>
               <button class="top_page_btn page_btn" id="display_settings">
-                <img src="/assets/icons/settings.svg">
+                <label>Settings</label>
               </button>
             </div> 
           </div>
