--- a/_layouts/portfolio_rethink.html
+++ b/_layouts/portfolio_rethink.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>{{page.title}} - Kris makes stuff</title>
     <meta name="twitter:card" content="summary">
-    <meta property="og:title" content="{{page.title}}"/>
+    <meta property="og:title" content="{{page.title}} - Kris makes stuff"/>
     <meta property="og:description" content="{{page.desc}}"/>
     <meta property="og:image" content="{{page.img}}"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
