--- a/assets/css/portfolio-rethink.css
+++ b/assets/css/portfolio-rethink.css
@@ -165,6 +165,19 @@ iframe{
   fill:#ffffff;
 }
 
+.post-list-group{
+  background: #00000050;
+  padding: 8px;
+  border-radius: 8px;
+  margin-bottom:8px;
+  b{
+    margin-bottom: 8px;
+    margin-left: 4px;
+    margin-top: 2px;
+    display: inline-block;
+  }
+}
+
 .mini-portfolio{
   
   li { background: #00000050; }
@@ -495,14 +508,15 @@ input:checked + .slider:before {
   }
 
   li{
-    margin-bottom: 8px;
+    margin-bottom: 2px;
     min-height: 50px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     padding-left: 8px;
     padding-right: 8px;
-    background-color: #00000030;
+    background-color: #f0f0f02e;
+    border-radius: 8px;
 
     &:hover {
       background-color: #00000070;
