--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -88,15 +88,14 @@
                   More Posts
                 </h2>
 
-                <ul class="post-list">
-                  {% assign posts = site.posts %}
-                  {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-                  {%- for post in posts -%}
-                      {%- if post.categories contains "Hidden" -%}
-                          {% continue %}
-                      {%- endif -%}
-
-                      <li onclick="location.href=`{{ post.url | relative_url }}`;">
+                {% assign posts = site.posts %}
+                {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
+                <div class="post-list-group">
+                  <b>Featured Posts</b>
+                  <ul class="post-list">
+                    {%- for post in posts -%}
+                      {%- if post.tags contains "Featured" -%}
+                        <li onclick="location.href=`{{ post.url | relative_url }}`;">
                           <div style="margin: 0px;">
                             <label style="text-align: left; font-weight: bold;" class="post-link" href="{{ post.url | relative_url }}">
                                 {{ post.title | escape }}
@@ -105,11 +104,59 @@
                                 <span class="post-meta post-meta-date">Posted: {{ post.date | date: date_format }}</span>
                             </div>
                           </div>
-                      </li>
-
+                        </li>
+                      {%- endif -%}                  
                   {%- endfor -%}
-                </ul>
+
+                  </ul>
+                </div>
+
+
+
+                {% assign listDate = null %}
+                {%- for post in posts -%}
+                  {%- if post.categories contains "Hidden" -%}
+                      {% continue %}
+                  {%- endif -%}
+
+                  {% assign currentDate = post.date | date: "%B %Y" -%}
+
+
+                  {%- if listDate != currentDate -%}
+                    {%- if listDate != null -%}
+                        </ul>
+                      </div>
+                    {%- endif -%}
+
+
+                    <div class="post-list-group">
+                      <b>{{currentDate | escape}}</b>
+                      <ul class="post-list">
+                  {%- endif -%}
+
+                  {%- assign listDate = currentDate -%}
+
+                  <li onclick="location.href=`{{ post.url | relative_url }}`;">
+                      <div style="margin: 0px;">
+                        <label style="text-align: left; font-weight: bold;" class="post-link" href="{{ post.url | relative_url }}">
+                            {{ post.title | escape }}
+                        </label>
+                        <div style="display: flex; flex-direction:row; margin:auto;">                            
+                            <span class="post-meta post-meta-date">Posted: {{ post.date | date: date_format }}</span>
+                        </div>
+                      </div>
+                  </li>
+
+                {%- endfor -%}
+
+                {%- if listDate != null -%}
+                    </ul>
+                  </div>
+                {%- endif -%}
+
               </div>
+            </div>
+
             </div>
 
             <div class="content-wrapper hidden" id="settings_container">
