Improved css in a tags

--- a/_layouts/portfolio_rethink.html
+++ b/_layouts/portfolio_rethink.html
@@ -18,7 +18,7 @@
 
   <body>
     <header class="site-header">
-      <a class="site-title" rel="author" href="/">Kris makes stuff</a>
+      <a style="color:whitesmoke" class="site-title" rel="author" href="/">Kris makes stuff</a>
     </header>
 
     <div data-keep class="page-background">
