--- a/_includes/WEBGPUViewer.html
+++ b/_includes/WEBGPUViewer.html
@@ -1,9 +1,13 @@
 <div class="embed-container">
     <iframe
-        src="/Extra/WebGPUParticles/"
+        id="demo-frame"
+        name="demo-frame"
+        src="/Extra/WebGPU/?launch={{ include.demo }}&profile={{include.profile}}"
         width="100%"
-        height="800"
+        height="100%"
         frameborder="0"
-        allowfullscreen="true">
+        allowfullscreen="true"
+        loading="eager"
+        style="pointer-events: all;">
     </iframe>
 </div>
