--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -49,7 +49,9 @@
           {% include threejsViewer.html demo=page.demo %}
         {%- endif -%}
 
-        
+        <div style="filter:blur(2px); height:100%; width:100%">
+          {% include webgpuViewer.html demo="particles" profile="home" %}
+        </div>
         
 
         <div id="page_title" style="height:100%;" class="page_title">
