Fixed minor layout bug

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -179,7 +179,7 @@
             </div>
           </div>
     
-          <div style="height: 32px;">
+          <div style="height: 32px; display:none">
             <div class="bottom_page_wrapper" id="page_btn_container">
               {%- if page.pagecount > 1 -%} 
                 {% assign pagecount = page.pagecount | plus: -1%}
