--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -58,7 +58,7 @@
           <div class="navigation-wrapper" id="navigation-wrapper" style="height: 100%; align-items: center;">
             <div class="post-title-container">
               <p class="post-title" style="font-size:3rem;">Kristian Dixon</p>
-              <p class="post-subtitle" style="font-size:1.2rem; margin: 4px 0px 8px 0px;">Game Developer - Graphics Researcher - Software Engineer</p> 
+              <p class="post-subtitle" style="font-size:1.2rem; margin: 4px 0px 8px 0px;text-shadow: 0px 0px 4px #000000, 0px 0px 12px #000000bd">Game Developer - Graphics Researcher - Software Engineer</p> 
 
               {%- include social.html -%}     
 
