Fixed alert in home on firefox. Fixed harvelson

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -50,7 +50,7 @@
         {%- endif -%}
 
         <div style="filter:blur(2px); height:100%; width:100%">
-          {% include webgpuViewer2.html demo="particles" profile="home" %}
+          {% include webgpuViewer2.html demo="particles" profile="home" extra="&surpressAlert=true" %}
         </div>
         
 
