--- a/_includes/webgpuViewer2.html
+++ b/_includes/webgpuViewer2.html
@@ -2,7 +2,7 @@
     <iframe
         id="demo-frame"
         name="demo-frame"
-        src="/Extra/WebGPU/?launch={{ include.demo }}&profile={{include.profile}}"
+        src="/Extra/WebGPU/?launch={{ include.demo }}&profile={{include.profile}}{{include.extra}}"
         width="100%"
         height="100%"
         frameborder="0"
