Quick test post for interior mapping ar

--- a/assets/css/portfolio-rethink.css
+++ b/assets/css/portfolio-rethink.css
@@ -483,6 +483,7 @@ input:checked + .slider:before {
     bottom: 0px;
     position: absolute;
     width: 100%;
+    pointer-events: none;
 }
 
 .embed-container
