--- a/_layouts/portfolio_rethink.html
+++ b/_layouts/portfolio_rethink.html
@@ -45,6 +45,10 @@
           {% include webgpuViewer2.html demo=page.demo %}
         {%- endif -%}
 
+        {%- if page.engine contains "youtube-player" -%}
+          {% include youtubePlayerMainWindow.html id=page.demo %}
+        {%- endif -%}
+
         <div id="page_title" class="page_title">
           <div class="navigation-wrapper" id="navigation-wrapper">
             <div class="post-title-container">
@@ -89,6 +93,25 @@
 
                 {% assign posts = site.posts %}
                 {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
+
+                <div class="post-list-group">
+                  <b>Paid Work</b>
+                  <ul class="post-list">
+                    {%- for post in posts -%}
+                      {%- if post.categories contains "paid_work" -%}
+                        <li onclick="location.href=`{{ post.url | relative_url }}`;">
+                          <div style="margin: 0px;">
+                            <label style="text-align: left; font-weight: bold;" class="post-link" href="{{ post.url | relative_url }}">
+                                {{ post.title | escape }}
+                            </label>
+                          </div>
+                        </li>
+                      {%- endif -%}                  
+                  {%- endfor -%}
+                  </ul>
+                </div>
+
+
                 <div class="post-list-group">
                   <b>Featured Posts</b>
                   <ul class="post-list">
@@ -115,6 +138,10 @@
                 {% assign listDate = null %}
                 {%- for post in posts -%}
                   {%- if post.categories contains "Hidden" -%}
+                      {% continue %}
+                  {%- endif -%}
+
+                  {%- if post.categories contains "paid_work" -%}
                       {% continue %}
                   {%- endif -%}
 
