--- a/_layouts/portfolio_rethink.html
+++ b/_layouts/portfolio_rethink.html
@@ -29,7 +29,8 @@
         data-lang="en"
         data-loading="lazy"
         crossorigin="anonymous"
-        async></script>
+        async
+        defer></script>
   </head>
 
   <body>
@@ -227,6 +228,9 @@
 
             <div class="content-wrapper hidden" id="comments_container">
               <div class="post-list-container" id="comments_parent">
+                <i style="font-size: 0.8rem;">Commenting requires a GitHub account.</i>
+                </br> 
+                <i style="font-size: 0.8rem;">To comment without using Giscus, please click on the number of comments to access GitHub Discussions directly.</i>
                 <div class="giscus">
 
                 </div>
